--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,4 +1,17 @@
-body {
-    color: #fff;
-    background-color: #000;
-}
+@import 'settings';
+
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800';
+
+@import 'base/reset';
+@import 'base/general';
+@import 'base/breakpoints';
+
+@import 'ui/grid';
+@import 'ui/padding';
+
+@import 'components/animate';
+@import 'components/layer';
+@import 'components/vinyl';
+@import 'components/cover-list';
+@import 'components/card-flip';
+@import 'components/track-list';
