update funcionality and interface

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -12,6 +12,8 @@
 @import 'components/animate';
 @import 'components/layer';
 @import 'components/vinyl';
+@import 'components/dialog';
+@import 'components/dashboard';
 @import 'components/cover-list';
 @import 'components/card-flip';
 @import 'components/track-list';
