--- a/templates/page/juke.hbs
+++ b/templates/page/juke.hbs
@@ -1,9 +1,11 @@
 {{> notActivated}}
 
+{{> dialog/addToQueue}}
+
 {{> isOffline}}
 
 {{> tracklist}}
 
 {{> explore}}
 
-{{> display}}
+{{> dashboard}}
