--- a/templates/components/explore.hbs
+++ b/templates/components/explore.hbs
@@ -1,6 +1,6 @@
 <section id="explore" class="grd-1">
-    <ul class="cover-list card-flip grd-\{{settings.coversInARow}}-each" v-bind:class="{'selected': coverList.selectedCover !== null}">
-        <li v-for="list in playlist.list" class="card" v-bind:class="{ 'selected': coverList.selectedCover === $index}" v-on:click="getPlaylist(list.id)">
+    <ul class="cover-list card-flip grd-\{{settings.coversInARow}}-each" v-bind:class="{'selected': navigation.coverPos !== null}">
+        <li v-for="list in playlist.list" class="card" v-bind:class="{ 'selected': navigation.coverPos === $index}" v-on:click="getPlaylist(list.id)">
 
             <div class="front cover" v-on:click="selectList($index);">
                 <h2>
