--- a/templates/components/tracklist.hbs
+++ b/templates/components/tracklist.hbs
@@ -1,5 +1,5 @@
-<section class="track-list" v-show="coverList.activeCover !== null">
-    <div class="inner">
+<section class="track-list" v-show="navigation.trackPos >= 0">
+    <div class="inner" v-show="playlist.current !== null">
         <div class="panel">
             <div class="row head">
                 <h3 class="grd-3-2">\{{playlist.current.name}}</h3>
@@ -11,7 +11,7 @@
             </div>
         </div>
         <ul id="trackList" class="list">
-            <li v-for="list in playlist.current.tracks.items" v-on:click.stop.prevent="addToQueue(list.track)" v-bind:class="{'selected': trackList.selectedTrack === $index}">
+            <li v-for="list in playlist.current.tracks.items" v-on:click.stop.prevent="addToQueue(list.track)" v-bind:class="{'selected': navigation.trackPos === $index}">
                 <h3 class="grd-2 cut">
                     \{{list.track.name}}
                 </h3>
@@ -20,6 +20,6 @@
                 </h3>
             </li>
         </ul>
-        <div class="background" style="background-image: url(\{{playlist.current.images[0].url}})">
+        <div class="background">
     </div>
 </section>
